--- a/CSS/abc.css
+++ b/CSS/abc.css
@@ -1,4 +1,71 @@
+p.font_8 {
+  font-size: 6vw;
+}
 
+@media (min-width: 720px) {
+  p.font_8 {
+    font-size: 4vw;
+  }
+}
+
+.comet {
+  position: absolute;
+}
+
+button {
+  /* background-color: transparent; */
+  border: none;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  }
+
+.color {
+  animation: color-change 5s ease-in-out infinite alternate;
+  font-family: times new roman, times, serif;
+  font-size: 9vw;
+  letter-spacing: 0.1em;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(to right, white, blue);
+  animation: glow 1s ease-in-out infinite alternate;
+  text-shadow: 0px 0px 10px rgb(255, 255, 255);
+  }
+  .color2 {
+    animation: color-change 1s ease-in-out infinite alternate;
+    font-family: times new roman, times, serif;
+    font-size: 1.5vw;
+    line-height: 1.5;
+    letter-spacing: 0.1em;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: linear-gradient(to right, white, blue);
+    animation: glow 5s ease-in-out infinite alternate;
+  }
+  
+  @keyframes glow {
+    from {
+      text-shadow: 0px 0px 1px rgb(99, 52, 255);
+    }
+    to {
+      text-shadow: 0px 0px 10px rgb(113, 91, 255);
+    }
+  }
+
+  @keyframes color-change {
+    0% {
+      color: white;
+    }
+    100% {
+      color: rgb(64, 50, 161);
+    }
+  }
+
+  .text {
+    background-image: linear-gradient(to right, white, blue);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    }
 
 /* Container holding the image and the text */
 .container {
@@ -37,11 +104,12 @@
 
 /* Centered text */
 .centered {
+  text-align: center;
   position: absolute;
-  top: 50%;
   left: 50%;
+  top: 50%;
   transform: translate(-50%, -50%);
-}
+  }
 
 .center {
   display: block;
@@ -53,17 +121,49 @@
 .row {
   display: flex;
   flex-wrap: nowrap;
-  padding: 0 4px;
-  grid-gap: 50px;
+  padding: 0 1vw;
+  grid-gap: 5vw;
 }
 
 /* Create two equal columns that sits next to each other */
 .column {
   flex: 50%;
-  padding: 0 4px;
+  padding: 0 1vw;
 }
 
 .column img {
-  margin-top: 8px;
+  margin-top: 2vw;
   vertical-align: middle;
+}
+@media only screen and (max-width: 767px) {
+  p {
+  font-size: 2vw;
+  }
+
+  h1 {
+  font-size: 5vh;
+  }
+
+  span {
+  font-size: 1.5em;
+  }
+}
+img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+body {
+  font-size: 16px;
+}
+
+@media (min-width: 480px) {
+  body {
+    font-size: 18px;
+  }
+}
+
+.font_8 {
+  font-size: 1.5em;
 }
